update web + docker

--- a/web/app/templates/base.html
+++ b/web/app/templates/base.html
@@ -14,7 +14,7 @@
             {% if title%}
             {{ title }}
             {% else %}
-            Скачки
+            Экзамен
             {% endif %}
         </title>
 </head>
@@ -83,7 +83,7 @@
 
     <footer class="footer mt-auto py-3 bg-light">
         <div class="container text-center">
-            <span class="text-muted">ОАО «Рязань Интернешнл»</span>
+            <span class="text-muted">v279e</span>
         </div>
     </footer>
 
